다시 처음부터 시작해보자

--- a/_posts/JAVA/CodingTestWithJava/2023-12-07-Lv1.추억점수.md
+++ b/_posts/JAVA/CodingTestWithJava/2023-12-07-Lv1.추억점수.md
@@ -1,6 +1,48 @@
 
 
+[문제](https://school.programmers.co.kr/learn/courses/30/lessons/176963)
+
 
 # 문제
-사진들을 보며 추억에 젖어 있던 루는 사진별로 추억 점수를 매길려고 합니다. 사진 속에 나오는 인물의 그리움 점수를 모두 합산한 값이 해당 사진의 추억 점수가 됩니다. 예를 들어 사진 속 인물의 이름이 ["may", "kein", "kain"]이고 각 인물의 그리움 점수가 [5점, 10점, 1점]일 때 해당 사진의 추억 점수는 16(5 + 10 + 1)점이 됩니다. 다른 사진 속 인물의 이름이 ["kali", "mari", "don", "tony"]이고 ["kali", "mari", "don"]의 그리움 점수가 각각 [11점, 1점, 55점]이고, "tony"는 그리움 점수가 없을 때, 이 사진의 추억 점수는 3명의 그리움 점수를 합한 67(11 + 1 + 55)점입니다.
+사진들을 보며 추억에 젖어 있던 루는 사진별로 추억 점수를 매길려고 합니다. 사진 속에 나오는 인물의 그리움 점수를 모두 합산한 값이 해당 사진의 추억 점수가 됩니다. 
+
+예를 들어 사진 속 인물의 이름이 **["may", "kein", "kain"]이고 각 인물의 그리움 점수가 [5점, 10점, 1점]일 때 해당 사진의 추억 점수는 16(5 + 10 + 1)점**이 됩니다. 다른 사진 속 인물의 이름이 **["kali", "mari", "don", "tony"]이고 ["kali", "mari", "don"]의 그리움 점수가 각각 [11점, 1점, 55점]**이고, **"tony"는 그리움 점수가 없을 때, 이 사진의 추억 점수는 3명의 그리움 점수를 합한 67(11 + 1 + 55)점**입니다.
+
 그리워하는 사람의 이름을 담은 문자열 배열 name, 각 사람별 그리움 점수를 담은 정수 배열 yearning, 각 사진에 찍힌 인물의 이름을 담은 이차원 문자열 배열 photo가 매개변수로 주어질 때, 사진들의 추억 점수를 photo에 주어진 순서대로 배열에 담아 return하는 solution 함수를 완성해주세요.
+
+
+# 정답
+
+```java
+class Solution {
+    public int[] solution(String[] name, int[] yearning, String[][] photo) {
+        int[] answer = new int[photo.length]; // 🇰🇷 각 사진의 기억 점수를 저장할 배열
+
+        for(int i = 0; i < photo.length; i++) { // 🇰🇷 photo의 length
+            int score = 0; // 현재 사진의 기억 점수
+            for(String person : photo[i]) {
+
+                for(int j = 0; j < name.length; j++) {
+                    if(person.equals(name[j])) {
+                        score += yearning[j]; // 🇰🇷 += 문법, 해당 사람의 그리움 점수를 더함
+
+                        break; // 🇬🇧 같은 이름을 찾았으면 더 이상 순회할 필요 없음
+                    }
+                }
+            }
+            answer[i] = score; // 해당 사진의 기억 점수 저장
+        }
+
+        return answer; // 모든 사진에 대한 기억 점수를 담은 배열 반환
+    }
+}
+```
+
+🇰🇷 표시는 내가 생각했던 부분과 유사하지만 다른 부분이다. 이론상 가능하지만 뭐가 틀렸는지 그 작은 차이가 안 보여서 정답을 확인했다.
+결과적으로 사용하려 했던 문법이나 전반적인 부분은 같았다.
+
+🇬🇧 표시는 생각지도 못한 부분이다.
+
+뮨법적으로 어려운 부분은 없었다. 그러나 간단한 차이로 해결하지 못했다.
+
+결과적으로 받은 점수는 958(+2)다. 이게 무슨 의미가 있을까.
