--- a/_posts/Resume/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/2023-09-21-23년지원기업피드백.md
@@ -18,7 +18,7 @@ pin: false
 |4|5|2023 09 19| [라마](https://www.jobkorea.co.kr/Recruit/GI_Read/42661062?Oem_Code=C1)|스타트업| 데이터 엔지니어|서류제출|||
 |-|6|2023 09 19| [포스코 DX]()|대| | ❌ 미지원|영어성적|Opic 준비가 필요해 보인다.|
 |5|7|2023 09 21| [천재교육](https://www.jobkorea.co.kr/Recruit/GI_Read/42685332?Oem_Code=C1&logpath=1&stext=자바&listno=13)|중견| Java 웹 개발자|📤 서류제출|||
-|6|8|2023 09 27| [아프리카tv](https://www.jobkorea.co.kr/Recruit/GI_Read/42868987?Oem_Code=C1) |중견| Nood.js 웹 개발자| 📤 서류제출|||
+|6|8|2023 09 27| [아프리카tv](https://www.jobkorea.co.kr/Recruit/GI_Read/42868987?Oem_Code=C1) |중견| Nood.js 웹 개발자 | 📤 서류제출|||
 |7|9|2023 10 31| [플레닛헬스캐어](https://www.jobkorea.co.kr/Recruit/GI_Read/42863489?Oem_Code=C1)|중소| 데이터 엔지니어| 📤 서류제출|||
 |8|10|2023 10 03|[CJ올리브네트웍스](https://recruit.cj.net/recruit/ko/recruit/recruit/detail.fo?zz_jo_num=7647)|대|Java 개발자| ❌📤 서류 탈락|||
 |9|11|2023 10 03|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21115485?compcd=?id=bookmark1000)|대| Java 개발자| ❌📤 서류 탈락|자소서?/학력?|10.11 탈락 소식을 들었는데 뭐 잘 못된 건지, 코테도 못 보고 떨어졌다고? 진짜 고려해봐야 한다. 아 가치관인가? 가치관에서 약간 좀 그랬나????|
@@ -48,7 +48,7 @@ pin: false
 |28|35|2023 11 06 |[펜타시스템테크놀로지](https://www.jobkorea.co.kr/Recruit/GI_Read/43126987?Oem_Code=C1&sc=67)|중소|데이터엔지니어|❌📤 서류탈락||
 |-|36|2023 11 06| [인천공항시설관리](https://airportfc.scout.co.kr/jobinfo/jobinfo_view.asp?ID=1022) |||❌ 미지원|||
 |29|37|2023 11 06| [아시아나IDT](https://asianaidt.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160928) | 대 |JAVA 경력직 3년| ❌🦾 AI역량검사 미응시 | 전에 본 것에 대한 트라우마 ||
-|30|38|2023 11 06| [경동나비엔](https://recruit.kdfamily.co.kr/info/recruit-detail.do?idx=1110)|대|SAP,ERP|  ❌👨‍👨‍👦 1차 면접 탈락 |업무 분석 x | ERP라는게 자바로 하는 줄 알았는데 아니었나? 보다? 아에 못 알아듣겠더라.|
+|30|38|2023 11 06| [경동나비엔](https://recruit.kdfamily.co.kr/info/recruit-detail.do?idx=1110)|대|SAP,ERP| ❌👨‍👨‍👦 1차 면접 탈락 |업무 분석 x | ERP라는게 자바로 하는 줄 알았는데 아니었나? 보다? 아에 못 알아듣겠더라.|
 |-|39|2023 11 09| [플레티어](https://career.plateer.com/2023) |||❌ 미지원|||
 |31|40|2023 11 10|[도루코](https://dorco.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=161026) |대|| ❌📤 서류탈락|||
 |32|41|2023 11 12|[현대HDS](https://www.hyundaihds.co.kr/homepage/recruit/selectAdoptionDetail.do) |대|어플 개발|📤 서류제출|||
@@ -73,23 +73,36 @@ pin: false
 |-|57|2023 12 04|[농협은행](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=61772) ||공공 금융 계약직|❌ 미지원|개발자 아닌 거 같은데||
 |42|58|2023 12 07|[오케이몰](https://www.jobkorea.co.kr/Recruit/GI_Read/43408970?Oem_Code=C1&sc=7) |중견|총괄기획팀 전산|📤 서류제출|||
 |43|59|2023 12 07|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/43268101?GI_No=45725474) |||📤 서류제출|||
+|-|60|2023 12 10|[현대스틸파이브](https://hyundaisteel-pipe.recruiter.co.kr/career/jobs/8828) |대|it|❌ 미지원|아 다했는데 마지막에 영어성적 필수네, 좇만하게 적어놨어;;;||
+|44|61|2023 12 10|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21187962?compcd=?id=bookmark1004) |대|MES/POP|📤 서류제출|||
+|-|62|2023 12 11|[이카운트](https://www.jobkorea.co.kr/Recruit/GI_Read/43445052?Oem_Code=C1&logpath=1&stext=해외%20근무%20개발자&listno=2) |||❌ 미지원|시바 공고에 개발직 없네? 1년 후 전환? 지랄이다.||
+|45|63|2023 12 10|[중앙신용정보](https://www.jobkorea.co.kr/Recruit/GI_Read/43476464?Oem_Code=C1) |중소|금융권 자바|📤 서류제출|||
+|46|64|2023 12 10|[NEZOT](https://www.jobkorea.co.kr/Recruit/GI_Read/43386877?Oem_Code=C1) |외국계|웹|📤 서류제출|||
+|-|65|2023 12 10|(앰코코리아)[https://amkor.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163675]|외국계|IT Application|❌ 미지원|효건이랑 롤체하다가||
+|||2023 12 11|[유안타증권](https://recruit.yuantakorea.com:4433/jobinfo/jobinfo_view.asp?ID=1753) |||❌ 미지원|날짜 착각||
+|||2023 12 13|[신라스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/43315040?Oem_Code=C1&sc=7) |||❌ 미지원|||
+|||2023 12 13|[하나은행TI](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=164460) |대|증권 WTS 개발/운영 경력 3년|❌ 미지원|||
+||||[맥도날드](https://mcdonalds.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=128408) |대|주말알바| ⭐️ 합격|||
 
-
-|||2023 12 10|[오스템임플란트](https://osstem.recruiter.co.kr/appsite/company/index) ||||||
-|||2023 12 10|[현대스틸파이브](https://hyundaisteel-pipe.recruiter.co.kr/career/jobs/8828) ||||||
-|||2023 12 11|[어카운트](https://www.jobkorea.co.kr/Recruit/GI_Read/43445052?Oem_Code=C1&logpath=1&stext=해외%20근무%20개발자&listno=2) ||||||
-|||2023 12 13|[신라스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/43315040?Oem_Code=C1&sc=7) ||||||
+|||2023 12 18|[농협캐피탈](https://nhcapital.career.co.kr) |대|IT 인턴||||
 |||2023 12 18|[신협중앙회](https://cu.saramin.co.kr/_service/cu/apply_site/apply/recruit_default.asp) ||||||
+|||2023 12 18|[건국대](http://www.konkuk.ac.kr/do/Index.do) |공|전산(개발)||||
+
 |||2023 12 23|[푸드나무 랭킹닭컴](https://www.jobkorea.co.kr/Recruit/GI_Read/43402500?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=1) |중소|자바 2년 경력||||
 
+|||2023 12 25|[비상교육](https://visang.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=164380) |대|ERP||||
+|||2023 12 28|[아이스크림아트](https://www.jobkorea.co.kr/Recruit/GI_Read/43441684?Oem_Code=C1) |중견|웹||||
+|||2023 12 31|[신한DS](https://shinhands.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=154771) ||||||
+
+|||2024 01 03|[디어유](https://www.jobkorea.co.kr/Recruit/GI_Read/43472006?Oem_Code=C1) |대?|payment 경력||||
 
 |||상시|[티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) |중견|||||
 |||상시|[중고나라](https://joonggonara.ninehire.site/job_posting/z7pPlfBo) ||||||
+|||상시|[제주항공](https://recruit.jejuair.net) |대|항공예약 시스템|어학 필수|||
+|||상시|[엠게임](https://www.jobkorea.co.kr/Recruit/GI_Read/43251367?Oem_Code=C1)|중소|프론트엔드||||
+|||상시|[삼양식품](https://samyangfoods.career.greetinghr.com/o/87493) |대|WMS시스템 운영||||
 
 
-
-|||| ||||||
-|||| ||||||
 |||| ||||||
 |||| ||||||
 |||| ||||||
