--- a/_posts/Resume/last/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/last/2023-09-21-23년지원기업피드백.md
@@ -9,7 +9,15 @@ pin: false
 
 # 9월 기업 분석 및 피드백
 
-|No.|  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
+총 88곳
+최종 제출 50곳
+서류합격/테스트합격 12곳
+1차 면접 합격 0곳
+
+문제점에 대해 판단해야할 때이다.
+
+
+| No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |1|1|2023 08 17| [인사이드정보](https://www.jobkorea.co.kr/Recruit/GI_Read/42578660)|중소|검색/챗봇 개발자 | ❌👨‍👨‍👦 1차 면접 탈락|1차 면접에서 떨어진 거는 기술 부족이겠지, 상관과의 마찰에 대해서도 너무 솔직하게 말했음.|MSA가 무엇인지.|
 |2|2|2023 09 17| [SK 머터리얼즈]()|대| |❌📤 서류 탈락|서류 제출 후 3일 만에 연락이 왔다. 이건 자기소개서 보다는 이력 문제인 듯 싶다. 부족한 부분은 아마도 영어 성적이나 학교가 문제 였겠지.|더 열심히 하자|
@@ -47,60 +55,64 @@ pin: false
 |-|34|2023 11 05| [자이C&A](https://xicna.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160126) |||❌ 미지원 |||
 |28|35|2023 11 06 |[펜타시스템테크놀로지](https://www.jobkorea.co.kr/Recruit/GI_Read/43126987?Oem_Code=C1&sc=67)|중소|데이터엔지니어|❌📤 서류탈락||
 |-|36|2023 11 06| [인천공항시설관리](https://airportfc.scout.co.kr/jobinfo/jobinfo_view.asp?ID=1022) |||❌ 미지원|||
-|29|37|2023 11 06| [아시아나IDT](https://asianaidt.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160928) | 대 |JAVA 경력직 3년| ❌🦾 AI역량검사 미응시 | 전에 본 것에 대한 트라우마 ||
+|29|37|2023 11 06| [아시아나IDT](https://asianaidt.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=160928) | 대 |JAVA 경력직 3년| ❌🤖 AI역량검사 미응시 | 전에 본 것에 대한 트라우마 ||
 |30|38|2023 11 06| [경동나비엔](https://recruit.kdfamily.co.kr/info/recruit-detail.do?idx=1110)|대|SAP,ERP| ❌👨‍👨‍👦 1차 면접 탈락 |업무 분석 x | ERP라는게 자바로 하는 줄 알았는데 아니었나? 보다? 아에 못 알아듣겠더라.|
 |-|39|2023 11 09| [플레티어](https://career.plateer.com/2023) |||❌ 미지원|||
 |31|40|2023 11 10|[도루코](https://dorco.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=161026) |대|| ❌📤 서류탈락|||
-|32|41|2023 11 12|[현대HDS](https://www.hyundaihds.co.kr/homepage/recruit/selectAdoptionDetail.do) |대|어플 개발|📤 서류제출|||
+|32|41|2023 11 12|[현대HDS](https://www.hyundaihds.co.kr/homepage/recruit/selectAdoptionDetail.do) |대|어플 개발|❌📤 서류탈락|||
 |-|42|2023 11 12| [SFA](https://recruit.sfa.co.kr/sfa/recruit?id=981&pg=1) |중견||❌ 미지원|||
 |33|43|2023 11 10|[세종텔레콤](https://www.jobkorea.co.kr/Recruit/GI_Read/43201186?Oem_Code=C1) |중견|웹개발| ❌👨‍👨‍👦 1차 면접 미참석|근무 조건|강동구에 본사가 집에서 2시간 거리인데 7:30~18 이었다. 매우 피곤할 것이 예상되는 시간이어서 면접비라도 받으러 갈까 하다가 눈도 오기도 하고 당일 면접취소 문자를 보냈다.|
 |-|44| 2023 11 17  | [메가존클라우드](https://xmukacmt.ninehire.site/job_posting/Z0bpi6pd?lang=en) | 외국계 |솔루션 아키텍트 게이밍|❌ 미지원|||
 |-|45|2023 11 20|[카카오](https://careers.kakao.com/jobs/P-13426) |대|개발자 인턴|❌ 미지원|||
 |-|46|2023 11 21| [현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) |||❌ 미지원|||
 |34|47|2023 11 27|[인크로스](https://thecareers.sktelecom.com/Recruit/Detail/3939) |대|프론트엔드|❌📤 서류탈락|||
-|35|48|2023 11 27|[롯데손해보험](https://lotteins.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163215) |대|IT 개발|📤 서류제출|||
+|35|48|2023 11 27|[롯데손해보험](https://lotteins.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163215) |대|IT 개발|❌📤 서류탈락|||
 |36|49|2023 11 30| [한솥](https://www.jobkorea.co.kr/Recruit/GI_Read/43353008?Oem_Code=C1)|중견|디지털기획운영팀|📤 서류제출|||
 |37|50||2023 11 30[하나금융TI 교육](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=159130) ||교육| ❌🤦‍♂️ KDT 불가 미지원 |||
 |38|52|2023 12 13| [뽐뿌](https://www.jobkorea.co.kr/Recruit/GI_Read/43317169?Oem_Code=C1&sc=7) |벤처|웹개발|📤 서류제출|||
 |39|53|2023 12 09|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/43401346?Oem_Code=C1&sc=7) |중소|선불 백엔드|📤 서류제출|||
 |-|54||2023 11 30[캐롯손해보험](https://career.carrotins.com/opening) |||❌ 미지원|||
-|40|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|📤 서류제출|||
+|40|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|👨‍👨‍👦 1차 면접|||
 |-|52|2023 12 03|[가온그룹](https://www.jobkorea.co.kr/Recruit/GI_Read/43400719?Oem_Code=C1) |중견|임베디드|❌ 미지원|임베디드라서||
 |41|53|2023 12 03|[현대 이지웰](https://www.jobkorea.co.kr/Recruit/GI_Read/43416590?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=49) |대기업 계열사|웹개발자|📤 서류제출|||
 |-|54|2023 12 03|[도쿄일렉트론코리아](https://tel.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163190) |외국계||❌ 미지원|||
 |-|55|2023 11 24|[피엠인터내셔널코리아](https://www.jobkorea.co.kr/Recruit/GI_Read/42950635?Oem_Code=C1&sc=7) |외국계|IT||❌ 미지원||
 |-|56|2023 12 04|[경동제약](https://www.jobkorea.co.kr/Recruit/GI_Read/43378322?Oem_Code=C1) ||3년 경력|❌ 미지원|||
 |-|57|2023 12 04|[농협은행](https://with.nonghyup.com/jbnf/jbnfDtl.do?jbnfSqno=61772) ||공공 금융 계약직|❌ 미지원|개발자 아닌 거 같은데||
-|42|58|2023 12 07|[오케이몰](https://www.jobkorea.co.kr/Recruit/GI_Read/43408970?Oem_Code=C1&sc=7) |중견|총괄기획팀 전산|📤 서류제출|||
+|42|58|2023 12 07|[오케이몰](https://www.jobkorea.co.kr/Recruit/GI_Read/43408970?Oem_Code=C1&sc=7) |중견|총괄기획팀 전산|❌📤 서류탈락|||
 |43|59|2023 12 07|[웰컴페이먼츠](https://www.jobkorea.co.kr/Recruit/GI_Read/43268101?GI_No=45725474) |||📤 서류제출|||
 |-|60|2023 12 10|[현대스틸파이브](https://hyundaisteel-pipe.recruiter.co.kr/career/jobs/8828) |대|it|❌ 미지원|아 다했는데 마지막에 영어성적 필수네, 좇만하게 적어놨어;;;||
-|44|61|2023 12 10|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21187962?compcd=?id=bookmark1004) |대|MES/POP|📤 서류제출|||
+|44|61|2023 12 10|[롯데정보통신](https://recruit.lotte.co.kr/apply/announcement/detail/21187962?compcd=?id=bookmark1004) |대|MES/POP|❌📤 서류탈락|||
 |-|62|2023 12 11|[이카운트](https://www.jobkorea.co.kr/Recruit/GI_Read/43445052?Oem_Code=C1&logpath=1&stext=해외%20근무%20개발자&listno=2) |||❌ 미지원|시바 공고에 개발직 없네? 1년 후 전환? 지랄이다.||
 |45|63|2023 12 10|[중앙신용정보](https://www.jobkorea.co.kr/Recruit/GI_Read/43476464?Oem_Code=C1) |중소|금융권 자바|📤 서류제출|||
-|46|64|2023 12 10|[NEZOT](https://www.jobkorea.co.kr/Recruit/GI_Read/43386877?Oem_Code=C1) |외국계|웹|📤 서류제출|||
+|46|64|2023 12 10|[NEZOT](https://www.jobkorea.co.kr/Recruit/GI_Read/43386877?Oem_Code=C1) |외국계|웹|❌📤 서류탈락|||
 |-|65|2023 12 10|(앰코코리아)[https://amkor.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163675]|외국계|IT Application|❌ 미지원|효건이랑 롤체하다가||
-|||2023 12 11|[유안타증권](https://recruit.yuantakorea.com:4433/jobinfo/jobinfo_view.asp?ID=1753) |||❌ 미지원|날짜 착각||
-|||2023 12 13|[신라스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/43315040?Oem_Code=C1&sc=7) |||❌ 미지원|||
-|||2023 12 13|[하나은행TI](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=164460) |대|증권 WTS 개발/운영 경력 3년|❌ 미지원|||
-||||[맥도날드](https://mcdonalds.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=128408) |대|주말알바| ⭐️ 합격|||
+|-|66|2023 12 11|[유안타증권](https://recruit.yuantakorea.com:4433/jobinfo/jobinfo_view.asp?ID=1753) |||❌ 미지원|날짜 착각||
+|-|67|2023 12 13|[신라스테이](https://www.jobkorea.co.kr/Recruit/GI_Read/43315040?Oem_Code=C1&sc=7) |||❌ 미지원|||
+|-|68|2023 12 13|[하나은행TI](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=164460) |대|증권 WTS 개발/운영 경력 3년|❌ 미지원|||
+|47|69|2023 12 31|[맥도날드](https://mcdonalds.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=128408) |대|주말알바| ⭐️ 합격|||
+|48|70||[지피티코리아]() |벹처|웹개발자|❌👨‍👨‍👦 1차 면접 미참석|제주도 여행||
+|49|71|2023 12 18|[농협캐피탈](https://nhcapital.career.co.kr) |대|IT 인턴|📤 서류제출|||
+|50|72|2023 12 18|[신협중앙회](https://cu.saramin.co.kr/_service/cu/apply_site/apply/recruit_default.asp) |||📤 서류제출|||
+|-|73|2023 12 18| [케이프투자증권](https://www.capefn.com/web/ir/HCD-020001.do) |||❌ 미지원|||
+|-|74|2023 12 18|[건국대](http://www.konkuk.ac.kr/do/Index.do) |공|전산(개발)|❌ 미지원|||
+|-|75|2023 12 23|[푸드나무 랭킹닭컴](https://www.jobkorea.co.kr/Recruit/GI_Read/43402500?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=1) |중소|자바 2년 경력|❌ 미지원|||
+|-|76|2023 12 25|[비상교육](https://visang.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=164380) |대|ERP|❌ 미지원|||
+|-|77|2023 12 26| [농협은행](https://jrs.jobkorea.co.kr/nhbank/nhbank24/Agi/Invite) ||IT|❌ 미지원|뭐지 언제 열렸다 닫힌 거지||
+|-|78|2023 12 28|[아이스크림아트](https://www.jobkorea.co.kr/Recruit/GI_Read/43441684?Oem_Code=C1) |중견|웹|❌ 미지원|조기마감||
+|-|79|2023 12 31|[신한DS](https://shinhands.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=154771) ||경력직|❌ 미지원||
+|-|80|2024 01 03|[디어유](https://www.jobkorea.co.kr/Recruit/GI_Read/43472006?Oem_Code=C1) |대?|payment 경력|❌ 미지원|||
+|-|81|2024 01 04|[우리금융캐피탈](https://woorifcapital.incruit.com/hire/viewhire.asp?projectid=102) |||❌ 미지원|||
+|-|82|2024 01 07|[하나펀드서비스](https://www.jobkorea.co.kr/Recruit/GI_Read/43605591?Oem_Code=C1&PageGbn=ST) |||❌ 미지원|||
+|-|83|상시|[티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) |중견||❌ 미지원|||
+|-|84|상시|[중고나라](https://joonggonara.ninehire.site/job_posting/z7pPlfBo) |||❌ 미지원|||
+|-|85|상시|[엠게임](https://www.jobkorea.co.kr/Recruit/GI_Read/43251367?Oem_Code=C1)|중소|프론트엔드|❌ 미지원|||
+|-|87|상시|[제주항공](https://recruit.jejuair.net) |대|항공예약 시스템|❌ 미지원|어학 필수||
+|-|88|상시|[삼양식품](https://samyangfoods.career.greetinghr.com/o/87493) |대|WMS시스템 운영|❌ 미지원|||
 
-|||2023 12 18|[농협캐피탈](https://nhcapital.career.co.kr) |대|IT 인턴||||
-|||2023 12 18|[신협중앙회](https://cu.saramin.co.kr/_service/cu/apply_site/apply/recruit_default.asp) ||||||
-|||2023 12 18|[건국대](http://www.konkuk.ac.kr/do/Index.do) |공|전산(개발)||||
 
-|||2023 12 23|[푸드나무 랭킹닭컴](https://www.jobkorea.co.kr/Recruit/GI_Read/43402500?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=1) |중소|자바 2년 경력||||
 
-|||2023 12 25|[비상교육](https://visang.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=164380) |대|ERP||||
-|||2023 12 28|[아이스크림아트](https://www.jobkorea.co.kr/Recruit/GI_Read/43441684?Oem_Code=C1) |중견|웹||||
-|||2023 12 31|[신한DS](https://shinhands.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=154771) ||||||
 
-|||2024 01 03|[디어유](https://www.jobkorea.co.kr/Recruit/GI_Read/43472006?Oem_Code=C1) |대?|payment 경력||||
-
-|||상시|[티맥스소프트](https://tmaxsoft.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=142081) |중견|||||
-|||상시|[중고나라](https://joonggonara.ninehire.site/job_posting/z7pPlfBo) ||||||
-|||상시|[제주항공](https://recruit.jejuair.net) |대|항공예약 시스템|어학 필수|||
-|||상시|[엠게임](https://www.jobkorea.co.kr/Recruit/GI_Read/43251367?Oem_Code=C1)|중소|프론트엔드||||
-|||상시|[삼양식품](https://samyangfoods.career.greetinghr.com/o/87493) |대|WMS시스템 운영||||
 
 
 |||| ||||||
