--- a/_posts/Resume/last/2022-12-26-resume.md
+++ b/_posts/Resume/last/2022-12-26-resume.md
@@ -20,7 +20,7 @@ categories: resume
         - 2022.03.17 ~ 2023.03.17 메타넷 디지털(주) 위택스 개발팀
             - 회사 정보
                 직원 수 : 536명/1200명
-                메츨액 : 
+                메츨액 : 1,509억 5,100만원
                 
             - 당담 업무
                 지방세(지역자원시설세,자동차세(주행분),지방세외수입) 관련 웹 어플리케이션(UI) 개발 및 유지보수
@@ -37,7 +37,7 @@ categories: resume
                 획득역량 : Spring 로직 개발 경험.
                 적용 포인트 : 트래픽 대처 및 문제해결능력
 
-            - 프로젝트 : 
+            - 프로젝트
                 - 지방세미리계산 자동차세(소유) UI 개편
                 - 지방세미리계산 재산세(세율특례) 계산식 기능 개편
                 - 지방세외수입 실명인증 기능 개발
@@ -91,11 +91,12 @@ categories: resume
             빅데이터 플랫폼 기반 자바&파이썬 개발자 양성 과정으로, 웹 프로그래밍(java,jsp,spring)부터 시작하여, 머신러닝(python), 딥러닝(tensorflow)까지 전반적인 개발 환경을 습득하고, 현업기업 실무자 멘토링을 통한 프로젝트 중심으로, 실습 위주의 훈련 과정입니다. (840시간)
                 
     - 2022.11.25 ADSP 자격증 취득 (한국데이터산업진흥원 ADsP-035002472)
+    - 2023.04.
     - 2023.09.01 정보처리기사 자격증 취득 (한국산업인력공단 23202190101X)
     - 2023.09.06 2종 보통 + 2종 소형 취득 (서울특별시경창청장 11-16-617186-51)
     - 2023.10.06 빅데이터분석기사 필기 (한국데이터산업진흥원)
 
-
+ 
 # 프로젝트
 ## 온라인 포트폴리오 웹사이트 (2023 - 현재)
         - 개인 프로젝트로 제작한 온라인 포트폴리오 웹사이트
@@ -131,8 +132,8 @@ categories: resume
 
 
 # 취미/특기 그리고 가치관
-    - 취미 : 중고 옷이나 기기 저렴한 구매하고 있습니다.
-    - 특기 : 낡은 옷이나 기기를 고쳐서 사용하는 것이 특기입니다.
+    - 취미 : 중고 옷이나 기기 저렴한 가격에 구매하고 있습니다.
+    - 특기 : 낡은 옷이나 고장난 기기를 고쳐서 사용하는 것이 특기입니다.
     - 좌우명 :
         모든 파도가 기회다. -마크 샌번
         천사도 두려워하는 곳에 바보가 달려든다. -알렉산더 포프
