--- a/_posts/Resume/last/2023-09-21-23년지원기업피드백.md
+++ b/_posts/Resume/last/2023-09-21-23년지원기업피드백.md
@@ -14,7 +14,7 @@ pin: false
 서류합격/테스트합격 12곳
 1차 면접 합격 0곳
 
-문제점에 대해 판단해야할 때이다.
+문제점에 대해 판단해야할 때이다. 1차 면접에서 왜 떨어졌을까
 
 
 | No.| count |  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
@@ -74,7 +74,7 @@ pin: false
 |-|54||2023 11 30[캐롯손해보험](https://career.carrotins.com/opening) |||❌ 미지원|||
 |40|51|2023 12 03|[아워홈](https://recruit.ourhome.co.kr/recruitview.do) |중견|웹개발|👨‍👨‍👦 1차 면접|||
 |-|52|2023 12 03|[가온그룹](https://www.jobkorea.co.kr/Recruit/GI_Read/43400719?Oem_Code=C1) |중견|임베디드|❌ 미지원|임베디드라서||
-|41|53|2023 12 03|[현대 이지웰](https://www.jobkorea.co.kr/Recruit/GI_Read/43416590?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=49) |대기업 계열사|웹개발자|📤 서류제출|||
+|41|53|2023 12 03|[현대 이지웰](https://www.jobkorea.co.kr/Recruit/GI_Read/43416590?Oem_Code=C1&logpath=1&stext=쇼핑몰%20개발&listno=49) |대기업 계열사|웹개발자|❌📤 서류탈락|||
 |-|54|2023 12 03|[도쿄일렉트론코리아](https://tel.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=163190) |외국계||❌ 미지원|||
 |-|55|2023 11 24|[피엠인터내셔널코리아](https://www.jobkorea.co.kr/Recruit/GI_Read/42950635?Oem_Code=C1&sc=7) |외국계|IT||❌ 미지원||
 |-|56|2023 12 04|[경동제약](https://www.jobkorea.co.kr/Recruit/GI_Read/43378322?Oem_Code=C1) ||3년 경력|❌ 미지원|||
@@ -92,7 +92,7 @@ pin: false
 |-|68|2023 12 13|[하나은행TI](https://hanati.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=164460) |대|증권 WTS 개발/운영 경력 3년|❌ 미지원|||
 |47|69|2023 12 31|[맥도날드](https://mcdonalds.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=128408) |대|주말알바| ⭐️ 합격|||
 |48|70||[지피티코리아]() |벹처|웹개발자|❌👨‍👨‍👦 1차 면접 미참석|제주도 여행||
-|49|71|2023 12 18|[농협캐피탈](https://nhcapital.career.co.kr) |대|IT 인턴|📤 서류제출|||
+|49|71|2023 12 18|[농협캐피탈](https://nhcapital.career.co.kr) |대|IT 인턴|❌📤 서류탈락|||
 |50|72|2023 12 18|[신협중앙회](https://cu.saramin.co.kr/_service/cu/apply_site/apply/recruit_default.asp) |||📤 서류제출|||
 |-|73|2023 12 18| [케이프투자증권](https://www.capefn.com/web/ir/HCD-020001.do) |||❌ 미지원|||
 |-|74|2023 12 18|[건국대](http://www.konkuk.ac.kr/do/Index.do) |공|전산(개발)|❌ 미지원|||
@@ -115,9 +115,6 @@ pin: false
 
 
 
-|||| ||||||
-|||| ||||||
-|||| ||||||
 
 
 |No.|  날짜  | 기업 |규모| 직무 | 현황 | 탈락 분석 | 실행 계획|
