--- a/_posts/Resume/last/2023-12-03-아워홈.md
+++ b/_posts/Resume/last/2023-12-03-아워홈.md
@@ -454,3 +454,63 @@ Javascript를 이용하여 기능을 개선헌 경험이 았습니다.
 그러나 이번에 끝내겠다는 다짐으로 간다.
 
 CSS를 신경 많이 썼기 때문에 [사전과제 결과물](https://github.com/Grokeen/Ourhome_React)을 보면 좀 잘해 보인다. 
+
+
+## 면접 과정
+발산역 근처에 있는 곳으로 9시 30분까지 지하에 강당 같은 곳으로 가게 되었다. 아버지가 면접 전날에 수술하셔서 잠깐 병원에 들렸다가 일찍 출발했다. 도착하니 8시 조금 넘었더라. 사람들은 생각보다 많이 와있었고, 이미 들어간 테이블도 있었다. 아, 테이블 별로 4명씩 23 테이블? 정도 있었던 거 같다. 물론 다 같은 분야는 아니다.
+
+9시 쯤 되니 우리 테이블도 다 오셨다. 대충 대화를 해보니, 사전과제를 어떻게 했는지 물었다.
+- 여자1 : 프론트에 react와 백에 Spring 혼합, Spring 위주 설계, DB 만듬
+- 남자1 : Javascript로 만 설계, 구현 x
+- 남자2 : 플루터?로 만 설계, react나 javascript 사용 x 
+
+그리고 대화를 해보니, 여성 분은 다른 테이블 사람과 아는 눈치였다. 보니까 스터디가 있다고 하더라???? 뭔 스터디가 다 있지 했더니 자소설닷컴? 거기서 구했단다.
+또 대화 도중에 알게 되었는데, 오늘은 성이 'ㄱ'인 사람 만 있었다. 와,,,, 얼마나 많이 1차 합격시킨 걸까,,,, 그럼 'ㄱ'으로 시작하는 개발직 만, 7테이블? 28명? 정도?
+
+면접은 두 명씩 들어가는 방식이고, 들어갈 때, 먼저 들어간 사람이 "차렷, 인사" 하고 앉으라고 한다. 그런건 좀 귀엽더라.
+
+강당 같은 곳 말고, 2차적으로 대기해야 하는 곳이 또 있었다. 결과는 1월 말에, 2차 면접은 2월 초에, 입사는 2월 중순에 알려준다고 했다.
+
+### 면접 시작
+나는 12시 쯤, 남자2랑 들어갔다. 솔직히 css는 자신이 있어서, 외관은 압살할 줄 알았다.
+남자2가 먼저 들어갔기 때문에 먼저 발표했다. 솔직히 기대안했다. 졸업도 아직 안했고, 기재되어 있는 react나 javascript를 사용 안했기 때문에 딱히 기대할 수 없었다.
+
+처음엔 긴장이 많이 한 목소리였다. 그러다가 면접관1이 "이걸 5일이나 걸렸어요?" 라고 중간에 물어봤다. 그 때, 뒤돌아서 발표 자료를 봤는데, 씨~발 잘했더라?
+보고있으면 더 기장될 거 같아서, 앞 만 보고 있었다.
+
+난 꼽 주는 의미인 줄 알았다. "이런게 5일이나 걸렸어요?"
+근데 뒤를 돌아서 살짝 보니까 "이게 5일 밖에 안 걸렸다고?" 이런 뉘양스인 거 같더라.
+
+보니까 플루터라는 걸 사용했는데, css를 아에 모르는 상태에서 플루터 만으로 거의 80% 유사하게, 기능까지 다 구현했었다. 발표도 중간부터 긴장을 잡고 평정심을 유지하면서 잘하셨고, 질문도 논리적으로 잘 받아치셨다.
+
+#### 남자2 면접관 질문
+```
+1. 개발 일정
+2. 직접 다 한 거냐 등(기억 안난다)
+```
+
+
+#### 나의 면접관 질문
+내 차례가 다가왔다.
+
+20분 만에 만든 ppt로 발표를 해야하다니,,,, 큰일이다. 일단 준비는 했었다. 1분 자기소개도 없이 한다는게 조금 편했다. 발표를 끝 마쳤다.
+
+```
+1. 개발 일정
+2. 세션 사용 이유 등
+```
+
+#### 추가 질문
+다시 자리에 착석했다. 그 뒤로 질문이 들어왔지만 "자신있는 언어", "상황 질문"이랑 "ppt 추가 내용", 아 그리고 개똥쌌던 "AI면접에서 했던 대답들 관련"해서 물어보더라 마지막으로 "물어보고 싶은 거 있냐" 이정도 였다. 금방 끝났다. 매우 아쉬웠다.
+
+면접은 30분에서 40분 정도 소모했던 거 같다.
+
+### 면접이 끝나고,,,,
+남자2와 같이 집에 갔다. 서로 긴장이 풀리니까 말도 트였다. 남자2도 아쉬워하던데, 내가 칭찬 음~청해줬다. 시바 근데 진짜 잘했다.
+
+만약에 이 분이 떨어진다? 그럼 react나 javascript 사용 안해서 일 것이다,,,,
+난 세션 질문이 기억에 남았다. 왜 사용했냐는 말에 "원래 로그인 기능에 쓰이는 걸 알고 있었다." 고 말했다.ㅋㅋㅋㅋ 어후,,, 그 질문 준비했었는데,,,
+
+그리고 AI,,,,, 개똥싼 거 보셨을 텐데, 어휴,,,,
+
+면접관2는 괜찮게 보는 거 같긴 했는데, 잘 모르겠다.
