--- a/_posts/Resume/last/2022-12-26-resume.md
+++ b/_posts/Resume/last/2022-12-26-resume.md
@@ -48,7 +48,7 @@ categories: resume
                 - 우편모아 각 자치단체 설치 및 연동, 한국지역정보개발원 지원
                 - 차세대 프로젝트 QA
             
-            - 퇴직사유 : 계약만료, 당시 근무했던 회사도 좋았지만, 공공기관 SI가 업무적으로 부족하다 느껴, 더 많은 경험을 얻고자 나오게 되었습니다.
+            - 퇴직사유 : 계약만료, 당시 근무했던 회사도 좋았지만, 더 많은 경험을 얻고자 나오게 되었습니다.
 
 
 # 학력
