--- a/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
+++ b/_posts/Resume/recent/2024-01-11-24년지원기업피드백.md
@@ -18,26 +18,36 @@
 |:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|:-----:|
 |1|1|2024 01 21| [캐논](https://recruit.lotte.co.kr/apply/announcement) |대| 개발직 인턴 | ❌📤 서류탈락 |||
 |2|2|2024 01 25|[KB라이프파트너스](https://kblifepartners.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=168063) |대|ERP 개발자, 데이터 관리|❌📤 서류탈락|||
-|3|3|2024 01 28|[메리츠화재](https://recruit.meritzfire.com/noticeView.rc) |대|채용형 인턴 IT개발, 2지망 IT인프라|📤 서류제출|||
+|3|3|2024 01 28|[메리츠화재](https://recruit.meritzfire.com/noticeView.rc) |대|채용형 인턴 IT개발, 2지망 IT인프라|❌📤 서류탈락|||
 |4|4|2024 01 29|[해태제과식품](https://recruit.ht.co.kr/notification/view.aspx?EMP_NO=00438) |중견|IT 개발 인턴|❌📤 서류탈락|자소서 100자~150자 부터 ㅈ같았다.||
 |5|5|2024 03 12|[메트라이프](https://brand.metlife.co.kr/ep/hack/methack4job.do#about) |대|해커톤 대회|📤 서류제출|||
-|||2024 01 29| [아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp)|중견|SW연구개발|❌ 미지원|||
-|||2024 01 30|[하나투어](https://www.jobkorea.co.kr/Recruit/GI_Read/43460311?Oem_Code=C1) |중견|3년차 JAVA개발자 |❌ 미지원|||
-|||2024 01 31|[컴퓨존](https://www.jobkorea.co.kr/Recruit/GI_Read/43820265?Oem_Code=C1) |중견|2년차 PHP웹개발|❌ 미지원|||
-|||2024 02 07|[KCC](https://recruit.kccworld.co.kr/recruit/recruitMain.do?SiteType=A) |중견|JAVA 개발자|❌ 미지원|토익 필수||
-||||[폴라리스오피스](https://www.polarisofficecorp.com/2024/01/23/ann0de7d0f/) |중소 |AI솔루션개발팀 앱 검증 업무, 체험형 인턴||||
-|||2024 02 02|[NH선물](http://ir.futures.co.kr/recruit/noticeList.do?bbsType=RNEW) ||IT[인프라]|❌ 미지원|날짜 착각||
+||6|2024 01 29| [아이디스](https://recruit.idis.co.kr:1007/_service/idis/apply_site/apply/recruit_default.asp)|중견|SW연구개발|❌ 미지원|||
+||7|2024 01 30|[하나투어](https://www.jobkorea.co.kr/Recruit/GI_Read/43460311?Oem_Code=C1) |중견|3년차 JAVA개발자 |❌ 미지원|||
+||8|2024 01 31|[컴퓨존](https://www.jobkorea.co.kr/Recruit/GI_Read/43820265?Oem_Code=C1) |중견|2년차 PHP웹개발|❌ 미지원|||
+||9|2024 02 07|[KCC](https://recruit.kccworld.co.kr/recruit/recruitMain.do?SiteType=A) |중견|JAVA 개발자|❌ 미지원|토익 필수||
+||10|2024 02 02|[NH선물](http://ir.futures.co.kr/recruit/noticeList.do?bbsType=RNEW) ||IT[인프라]|❌ 미지원|날짜 착각||
+||11|2024 02 06|[티머니](https://tmoney.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169275) |중견|개발|📤 서류제출|||
+||12|2024 02 08|[한국부동산원](https://reb.incruit.com/hire/viewhire.asp?projectid=101) |공|일반 전산|📤 서류제출|||
 
 
-
-|||2024 02 06|[티머니](https://tmoney.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169275) ||개발||||
-|||2024 02 08|[한국부동산원](https://reb.incruit.com/hire/viewhire.asp?projectid=101) |공|일반 전산||||
-||| 상시 |[현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||||||
-|||2024 02 13| [신용회복위원회](https://ccrs.career.co.kr/jobs/jobs_view.asp?ID=1001) |공|전산 개발||||
-|||2024 02 12| [엠로](https://emro.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169591&recruitKindCode=BASIC)|중견|기업용 솔루션 개발||||
 |||상시|[넥슨](https://career.nexon.com/user/recruit/member/postDetail?joinCorp=NX&reNo=20230283&currentPage=0) |대|프론트엔드 UI||||
+|||상시|[토스뱅크](https://toss.im/career/job-detail?job_id=4071101003) |중견|프로트엔드||||
+|||상시|[현대자동차](https://talent.hyundai.com/apply/applyView.hc?recuYy=2023&recuType=N2&recuCls=549) ||||||
 
-|||| ||||||
+|||2024 02 12| [엠로](https://emro.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=169591&recruitKindCode=BASIC)|중견|기업용 솔루션 개발||||
+|||2024 02 13| [신용회복위원회](https://ccrs.career.co.kr/jobs/jobs_view.asp?ID=1001) |공|전산 개발||||
+
+
+|||2024 02 18|[현대트랜시스](https://hyundai-transys.recruiter.co.kr/career/jobs/12765) ||시트 전장품질(애매함)||||
+
+|||2024 02 16|[한국음악저작권협회](https://www.komca.or.kr/service2/service_130301_info.jsp#) ||전산관리 ERP||||
+|||2024 02 18|[LS ITC](https://lsitc.recruiter.co.kr/app/jobnotice/view?systemKindCode=MRS2&jobnoticeSn=170694) ||IT/클라우드 인턴||||
+|||2024 02 19|[리딩투자증권](https://www.kofia.or.kr/brd/m_96/view.do?seq=28238&srchFr=&srchTo=&srchWord=&srchTp=&multi_itm_seq=0&itm_seq_1=0&itm_seq_2=0&company_cd=&company_nm=&page=1) ||IT개발(웹) ||||
+|||2024 02 18|[SL](https://slworld.recruiter.co.kr/app/applicant/jobnotice/popupNoticeList/?applicantActionCode=SHOW_NOTICE) ||IT||||
+
+|||2024 02 22|[오케이몰](https://www.okmall.com/company/recruit) ||시스템 개발팀 웹 개발자 경력 3년||||
+|||2024 02 27|[캐롯손해보험](https://career.carrotins.com/o/100854) ||data scientist 인턴||||
+
 |||| ||||||
 |||| ||||||
 |||| ||||||
